force-app/main/default/objects/IVR_Calls_Numeral8__c/IVR_Calls_Numeral8__c.object-meta.xml
<CustomObject>
    <label>IVR Calls Numeral8</label>
    <nameField>
        <label>IVR Calls Numeral8 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IVR Calls Numeral8</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>