force-app/main/default/objects/IVR_Calls_Numeral8__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IVR Calls Numeral8</relationshipLabel>
    <relationshipName>IVR_Calls_Numeral8</relationshipName>
    <type>Lookup</type>
</CustomField>