force-app/main/default/objects/IVR_Calls_Numeral8__c/fields/Covid19__c.field-meta.xml
<CustomField>
    <fullName>Covid19__c</fullName>
    <label>Covid19</label>
    <referenceTo>Covid19__c</referenceTo>
    <relationshipLabel>IVR Calls Numeral8</relationshipLabel>
    <relationshipName>IVR_Calls_Numeral8</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>