force-app/main/default/objects/IVR_Calls_Numeral8__c/fields/Date_Time_GET__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_GET__c</fullName>
    <label>Date Time GET</label>
    <type>DateTime</type>
</CustomField>