force-app/main/default/objects/IVR_Calls_Numeral8__c/fields/GET_Response__c.field-meta.xml
<CustomField>
    <fullName>GET_Response__c</fullName>
    <label>GET Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>