force-app/main/default/objects/IVR_Calls_Numeral8__c/fields/Paciente_Phone__c.field-meta.xml
<CustomField>
    <fullName>Paciente_Phone__c</fullName>
    <label>Paciente Phone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>