force-app/main/default/objects/IVR_Calls_Numeral8__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inicial</fullName>
            </value>
            <value>
                <fullName>Enviando</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>POST_ENVIADO</fullName>
            </value>
            <value>
                <fullName>POST_OK</fullName>
            </value>
            <value>
                <fullName>POST_FAILED</fullName>
            </value>
            <value>
                <fullName>GET_ENVIADO</fullName>
            </value>
            <value>
                <fullName>GET_OK</fullName>
            </value>
            <value>
                <fullName>GET_FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>